; ModuleID = '/home/carl/AnghaBench/Provenance/Cores/Atari800/atari800-src/extr_atari_x11.c_autorepeat_restore.c'
source_filename = "/home/carl/AnghaBench/Provenance/Cores/Atari800/atari800-src/extr_atari_x11.c_autorepeat_restore.c"
target datalayout = "e-m:e-p270:32:32-p271:32:32-p272:64:64-i64:64-f80:128-n8:16:32:64-S128"
target triple = "x86_64-unknown-linux-gnu"

@autorepeat = common dso_local global i64 0, align 8
@display = common dso_local global i32 0, align 4
@llvm.used = appending global [1 x i8*] [i8* bitcast (void ()* @autorepeat_restore to i8*)], section "llvm.metadata"

; Function Attrs: noinline nounwind optnone uwtable
define internal void @autorepeat_restore() #0 {
  %1 = load i64, i64* @autorepeat, align 8
  %2 = icmp ne i64 %1, 0
  br i1 %2, label %3, label %6

3:                                                ; preds = %0
  %4 = load i32, i32* @display, align 4
  %5 = call i32 @XAutoRepeatOn(i32 %4)
  br label %9

6:                                                ; preds = %0
  %7 = load i32, i32* @display, align 4
  %8 = call i32 @XAutoRepeatOff(i32 %7)
  br label %9

9:                                                ; preds = %6, %3
  ret void
}

declare dso_local i32 @XAutoRepeatOn(i32) #1

declare dso_local i32 @XAutoRepeatOff(i32) #1


!llvm.module.flags = !{!0}
!llvm.ident = !{!1}

!0 = !{i32 1, !"wchar_size", i32 4}
!1 = !{!"clang version 10.0.1 (https://github.com/wsmoses/llvm-project-tok c8e5003577614e72d6d18a216e6a09771e1fcce4)"}
